--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -1,9 +1,22 @@
 doctype html
 html(lang="en")
   head
-    title= pageTitle
-    link(rel="stylesheet", href="vendor.css")
-    link(rel="stylesheet", href="demo-style.css")
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
+    meta( name="viewport", content="user-scalable=no, width=device-width")
+    meta(name="apple-mobile-web-app-capable",content="yes")
+    title Clean Brunch Pancakes
+    link( rel="shortcut icon", href="favicon.ico")
+    link(rel="stylesheet", href="/vendor.css")
+    link(rel="stylesheet", href="/app.css")
+    //-     Fav and touch icons
+    //-     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    //-     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+    //-     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+    //-     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    script(src="/vendor.js", defer)
+    script(src="/templates.js", defer)
+    script(src="/app.js", defer, onload="require('initialize');")
   body
     #preferences
     #wrapper.startpage
