--- a/app/demo-style.css
+++ b/app/demo-style.css
@@ -1,9 +1,17 @@
+html {
+  font-size: 16px;
+}
+body {
+  color: #352a25;
+  font-family: Georgia, serif;
+  font-size: 62.5%; /* 1em = 10px */
+}
+
 *{
     outline:0;
 }
 body {
     background:#555;
-    font-size: 13px
 }
 #wrapper.startpage {
     text-align: center
